Up-to-date 05/04

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -6,6 +6,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, spread radius, color */
     transition: 0.3s; /* Optional: adds a transition effect when the shadow changes */
     background-color: black;
+    height: 100%;
   }
 
   .lesson-card:hover {
