--- a/static/quiz.css
+++ b/static/quiz.css
@@ -8,7 +8,7 @@ body {
 .container {
     max-width: 600px;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: beige;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
