--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -67,14 +67,32 @@
   <div class="row">
     <div class="col-md-8">
       <div class="row">
+        
+        {% for unit in units %}
         <div class="col-md-6 mb-3">
+            <div class="card lesson-card">
+              <img src="{{unit.description}}" class="img-responsive-img-top" alt="..." style="height:200px">
+                <div class="card-body">
+                    <h5 class="card-title">{{unit.id}} - {{unit.name}}</h5>
+                    <!-- <p class="card-text">Review your lessons and track your progress.</p> -->
+                    <a href="/lesson/{{unit.id}}" class="btn btn-primary">Lessons</a>
+                    <!-- <a href="/quiz/1" class="btn btn-primary">Quizzes</a>  -->
+                    <a href="#" class="btn btn-primary quiz-button" data-toggle="modal" data-target="#quizModal" data-unit="{{unit.id}}">Quizzes</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        
+        
+        
+        <!-- <div class="col-md-6 mb-3">
           <div class="card lesson-card">
             <img src="{% static 'conversation.jpg' %}" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">1 - Basic Conversation and Phrases</h5>
-              <!-- <p class="card-text">Review your lessons and track your progress.</p> -->
+              
               <a href="/lesson" class="btn btn-primary">Lessons</a>
-              <!-- <a href="/quiz/1" class="btn btn-primary">Quizzes</a>  -->
+              
               <a href="/quiz/1" class="btn btn-primary quiz-button" data-toggle="modal" data-target="#quizModal" data-unit="1">Quizzes</a>
             </div>
           </div>
@@ -84,7 +102,7 @@
             <img src="{% static 'common_animals.jpg' %}" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">2 - Common Foods and Animal Names</h5>
-              <!-- <p class="card-text">Review your lessons and track your progress.</p> -->
+              
               <a href="#" class="btn btn-primary">Lessons</a>
               <a href="/quiz2" class="btn btn-primary">Quizzes</a>
             </div>
@@ -95,9 +113,9 @@
             <img src="{% static 'colors_numbers.jpeg' %}" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">3 - Colors, Numbers and Basic Objects</h5>
-              <!-- <p class="card-text">Review your lessons and track your progress.</p> -->
+             
               <a href="#" class="btn btn-primary">Lessons</a>
-              <!-- <a href="/quiz3" class="btn btn-primary">Quizzes</a> -->
+              
               <a href="/quiz3" class="btn btn-primary quiz-button" data-toggle="modal" data-target="#quizModal" data-unit="3">Quizzes</a>
             </div>
           </div>
@@ -107,80 +125,80 @@
             <img src="{% static 'outdoors.jpg' %}" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">4 - General Outdoors and Weather</h5>
-              <!-- <p class="card-text">Review your lessons and track your progress.</p> -->
+              
               <a href="#" class="btn btn-primary">Lessons</a>
-              <!-- Button trigger modal -->
+              
               <a href="#" class="btn btn-primary" id="quizButton" data-toggle="modal" data-target="#quizModal">
                 Quizzes
               </a>
-
-              <!-- Modal -->
-              <div class="modal fade" id="quizModal" tabindex="-1" role="dialog" aria-labelledby="quizModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-lg" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="quizModalLabel">Quiz List</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <ul class="list-group">
-                        <!-- Quiz 1 -->
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                          <div>
-                            Quiz 1: <strong>3 out of 10 questions answered</strong>
-                            <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
-                              <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
-                            </div>
-                          </div>
-                          <!-- <button type="button" class="btn btn-primary" href="/quiz/1">Access Quiz</button> -->
-                          <a href="/quiz/1/1" class="btn btn-primary">Access Quiz</a>
-                        </li>
-                        <!-- Quiz 2 -->
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                          <div>
-                            Quiz 2: <strong>5 out of 10 questions answered</strong>
-                            <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
-                              <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-                            </div>
-                          </div>
-                          <!-- <button type="button" class="btn btn-primary" onclick="accessQuiz(2)">Access Quiz</button> -->
-                          <a href="#" class="btn btn-primary">Access Quiz</a>
-                        </li>
-                        <!-- Quiz 3 -->
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                          <div>
-                            Quiz 3: <strong>7 out of 10 questions answered</strong>
-                            <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
-                              <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
-                            </div>
-                          </div>
-                          <!-- <button type="button" class="btn btn-primary" onclick="accessQuiz(3)">Access Quiz</button> -->
-                          <a href="#" class="btn btn-primary">Access Quiz</a>
-                        </li>
-                        <!-- Quiz 4 -->
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                          <div>
-                            Quiz 4: <strong>10 out of 10 questions answered</strong>
-                            <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
-                              <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                            </div>
-                          </div>
-                          <!-- <button type="button" class="btn btn-primary" onclick="accessQuiz(4)">Access Quiz</button> -->
-                          <a href="#" class="btn btn-primary">Access Quiz</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="modal-footer">
-                      <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                      <!-- You can add additional buttons if needed -->
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
+        </div> -->
+
+        <!-- Modal -->
+        <div class="modal fade" id="quizModal" tabindex="-1" role="dialog" aria-labelledby="quizModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="quizModalLabel">Quiz List</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <ul class="list-group">
+                <!-- Quiz 1 -->
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                    Quiz 1: <strong>3 out of 10 questions answered</strong>
+                    <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
+                        <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
+                    </div>
+                    </div>
+                    <!-- <button type="button" class="btn btn-primary" href="/quiz/1">Access Quiz</button> -->
+                    <a href="/quiz/1/1" class="btn btn-primary">Access Quiz</a>
+                </li>
+                <!-- Quiz 2 -->
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                    Quiz 2: <strong>5 out of 10 questions answered</strong>
+                    <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
+                        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                    </div>
+                    </div>
+                    <!-- <button type="button" class="btn btn-primary" onclick="accessQuiz(2)">Access Quiz</button> -->
+                    <a href="#" class="btn btn-primary">Access Quiz</a>
+                </li>
+                <!-- Quiz 3 -->
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                    Quiz 3: <strong>7 out of 10 questions answered</strong>
+                    <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
+                        <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                    </div>
+                    </div>
+                    <!-- <button type="button" class="btn btn-primary" onclick="accessQuiz(3)">Access Quiz</button> -->
+                    <a href="#" class="btn btn-primary">Access Quiz</a>
+                </li>
+                <!-- Quiz 4 -->
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                    Quiz 4: <strong>10 out of 10 questions answered</strong>
+                    <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
+                        <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    </div>
+                    </div>
+                    <!-- <button type="button" class="btn btn-primary" onclick="accessQuiz(4)">Access Quiz</button> -->
+                    <a href="#" class="btn btn-primary">Access Quiz</a>
+                </li>
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                <!-- You can add additional buttons if needed -->
+            </div>
+            </div>
+        </div>
         </div>
         
         <!-- Repeat for other units -->
